# elle

./: .clang-format  .clang_complete  .git-nest  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gitsubtree  .pylintrc  .travis.yml  1.patch  2.patch  Authority.cc  Authority.hh  Authority.hxx  BN.cc  BN.hh  BN.hxx  Buffer.cc  Buffer.hh  Buffer.hxx  CMakeLists.txt  Cipher.cc  Cipher.hh  Cipher.hxx  Clear.hh  Clear.hxx  Code.cc  Code.hh  Comet.hh  CrashReporter.cc  CrashReporter.hh  Cryptography.cc  Cryptography.hh  DESIGN  Digest.cc  Digest.hh  Digest.hxx  Dockerfile  Dockerfile.ci  (+139 more)
elle/: Authority.cc  Authority.hh  Authority.hxx  Buffer.cc  Buffer.hh  CMakeLists.txt  CMakeLists.txt.bak  CrashReporter.cc  CrashReporter.hh  Doxyfile  Elle.cc  Elle.hh  Elle.hxx  Exception.cc  Exception.hh  Exception.hxx  HttpClient.cc  HttpClient.hh  HttpClient.hxx  IOStream.cc  IOStream.hh  Makefile.am  Manifest.hh  Passport.cc  Passport.hh  Passport.hxx  Printable.cc  Printable.hh  Version.cc  Version.hh  Version.hxx  assert.cc  assert.hh  attribute.hh  backtrace.hh  cast.hh  compiler.hh  core.hh  dpkg_preload.cc  drakefile  (+20 more)
elle/archive/: Archivable.cc  Archivable.hh  Archive.cc  Archive.hh  Archive.hxx
elle/benchmark/: CMakeLists.txt
elle/channel/: Bridge.hh  Channel.hh  Location.cc  Socket.hh
elle/concept/: Fileable.hh  Fileable.hxx  Serializable.hh  Uniquable.hh  Uniquable.hxx
elle/concurrency/: Accord.cc  Accord.hh  Application.cc  Application.hh  Application.hxx  Broker.cc  Broker.hh  Callback.hh  Callback.hxx  Closure.hh  Closure.hxx  Concurrency.cc  Concurrency.hh  Condition.hh  Entrance.hh  Entrance.hxx  Environment.cc  Environment.hh  Environment.hxx  Event.cc  Event.hh  Event.hxx  EventSerializer.hxx  Fiber.cc  Fiber.hh  Fiber.hxx  Frame.cc  Frame.hh  Function.hh  Function.hxx  Hurdle.cc  Hurdle.hh  Identifier.cc  Method.hh  Method.hxx  Mode.hh  Mutex.cc  Mutex.hh  Phase.hh  Program.cc  (+20 more)
elle/container/: Container.hh
elle/core/: Boolean.hh  Byte.hh  Character.hh  Core.hh  Core.hxx  Entity.cc  Entity.hh  Integer.cc  Integer.hh  Large.cc  Large.hh  Macro.hh  Meta.hh  Natural.cc  Natural.hh  Null.cc  Null.hh  Object.hh  Pointer.hh  Real.hh  String.hh  Trace.cc  Trace.hh  Type.cc  Type.hh  Type.hxx  Void.cc  Void.hh
elle/crypto/: Cipher.cc  Cipher.hh  Code.cc  Code.hh  Cryptography.cc  Cryptography.hh  Digest.cc  Digest.hh  KeyPair.cc  KeyPair.hh  OneWay.cc  OneWay.hxx  Plain.hh  PrivateKey.cc  PrivateKey.hh  PrivateKey.hxx  PublicKey.cc  PublicKey.hh  PublicKey.hxx  SecretKey.cc  SecretKey.hh  SecretKey.hxx  Signature.cc  Signature.hh
elle/cryptography/: Cipher.cc  Cipher.hh  Cipher.hxx  CipherSerializer.hxx  Clear.cc  Clear.hh  Code.cc  Code.hh  Code.hxx  Cryptography.cc  Cryptography.hh  Digest.cc  Digest.hh  Digest.hxx  DigestSerializer.hxx  Input.cc  Input.hh  KeyPair.cc  KeyPair.hh  KeyPair.hxx  KeyPairSerializer.hxx  LargeSerializer.hxx  OneWay.cc  OneWay.hh  OneWay.hxx  Output.cc  Output.hh  Output.hxx  Plain.hh  Plain.hxx  PlainSerializer.hxx  PrivateKey.cc  PrivateKey.hh  PrivateKey.hxx  PrivateKeySerializer.hxx  PublicKey.cc  PublicKey.hh  PublicKey.hxx  PublicKeySerializer.hxx  Random.cc  (+19 more)
elle/factory/: Factory.cc  Factory.hh  Factory.hxx
elle/format/: fwd.hh  hexadecimal.cc  hexadecimal.hh  ini.fwd.hh  ini.hh  ini.hxx  json.fwd.hh  json.hh
elle/idiom/: Close.hh  Idiom.hh  Open.hh
elle/io/: Console.cc  Console.hh  Directory.cc  Directory.hh  Dumpable.cc  Dumpable.hh  File.cc  File.hh  Fileable.hh  Fileable.hxx  IO.hh  Link.cc  Link.hh  Manipulators.cc  Manipulators.hh  Path.cc  Path.hh  Path.hxx  Pattern.cc  (+6 more)
etoile/: CMakeLists.txt  Etoile.cc  Etoile.hh  Makefile.am  Makefile.in  Manifest.hh  etoile.cc  fwd.hh  main.cc
hole/: Address.hh  CMakeLists.txt  Cmp.hh  DHT.cc  DHT.hh  DHTJoinRequest.cc  DHTJoinRequest.hh  DHTJoinRequestHandler.cc  DHTJoinRequestHandler.hh  DHTRequest.cc  DHTRequest.hh  DHTRequestHandler.cc  DHTRequestHandler.hh  Data.hh  FingerTable.cc  FingerTable.hh  FingerTable.hxx  FreeList.hh  FreeList.hxx  FreeListTest.cc  FullTag.cc  FullTag.hh  Hole.cc  Hole.hh  Holeable.cc  Holeable.hh  Key.cc  Key.hh  Key.hxx  Label.cc  Label.hh  Label.hxx  LabelSerializer.hxx  LocalNode.cc  LocalNode.hh  Manifest.hh  Model.cc  Model.hh  Model.hxx  Node.cc  (+10 more)
horizon/: CMakeLists.txt  Crib.cc  Crib.hh  Crux.cc  Crux.hh  Crux.hxx  Diary.cc  Diary.hh  FUSE.cc  FUSE.hh  FUker.cc  FUker.hh  Facade.cc  Facade.hh  Handle.cc  Handle.hh  Horizon.cc  Horizon.hh  InterlacedFUker.cc  InterlacedFUker.hh  Janitor.cc  Janitor.hh  Janitor.hxx  Makefile  PIG.cc  PIG.hh  ParallelFUker.cc  ParallelFUker.hh  Policy.hh  SequentialFUker.cc  SequentialFUker.hh  Ward.cc  Ward.hh  finally.hh  fwd.hh  main.cc  operations.hh  pig.c  pig.cc  pig.h
nucleus/: CMakeLists.txt  Derivable.cc  Derivable.hh  Derivable.hxx  Exception.cc  Exception.hh  Exception.hxx  Nucleus.cc  Nucleus.hh  all.hh  factory.cc  factory.hh  fwd.hh  nucleus.cc  nucleus.hh
release/: CMakeLists.txt  make_release.py
satellites/: CMakeLists.txt  LICENCE
src/: CMakeLists.txt  array  bitset  chrono  iomanip  iostream  list  locale  map  memory  normalize.cpp  reader.cpp  sample.c  schemes.cpp  set  string  string.cc  tuple  type_traits  unordered_map  unordered_set  uri.cpp  uri_builder.cpp  uri_errors.cpp  uri_io.cpp  utility  value.cpp  vector  writer.cpp
test/: CMakeLists.txt  optional_test.cpp  reader_test.cpp  reader_test.h  relative_uri_test.cpp  scheme_tests.cpp  stream_reader_test.cpp  stream_reader_test.h  string_utility.hpp  test.cpp  test.txt  uri_builder_stream_test.cpp  uri_builder_test.cpp  uri_comparison_test.cpp  uri_encoding_test.cpp  uri_normalization_test.cpp  uri_parse_path_test.cpp  uri_parse_scheme_test.cpp  uri_parse_test.cpp  uri_reference_test.cpp  uri_relativize_test.cpp  uri_resolve_test.cpp  uri_stream_test.cpp  uri_test.cpp  utils_test.cpp  utils_test_test.cpp  valid_urls.txt  value_test.cpp  writer_test.cpp
tests/: .gitignore  CMakeLists.txt  HTTPDownload  IOStream.cc  Logger.cc  Version.cc  doctest  finally.cc  printf.cc  sched  test-suite  test.py  testing_tests.cc
(+9442 files in other folders)
