#
# ---------- header -----------------------------------------------------------
#
# project       infinite
#
# license       GPL
#
# file          /home/mycure/infinit/Makefile.am
#
# created       julien quintard   [wed nov 14 14:38:20 2007]
# updated       julien quintard   [fri mar 21 12:32:31 2008]
#

#
# ---------- directories ------------------------------------------------------
#

SUBDIRS			=	elle					\
				infinit					
