PROJECT(Facade CXX)

ADD_LIBRARY(facade
  Facade.cc
)

IF(INFINIT_LINUX)
  ADD_SUBDIRECTORY(linux)

  TARGET_LINK_LIBRARIES(facade linux)
ELSEIF(INFINIT_MACOSX)
  ADD_SUBDIRECTORY(macosx)

  TARGET_LINK_LIBRARIES(facade macosx)
ELSEIF(INFINIT_WINDOWS)
  ADD_SUBDIRECTORY(windows)

  TARGET_LINK_LIBRARIES(facade windows)
ENDIF()
