PROJECT(Horizon CXX)

ADD_LIBRARY(horizon
  Horizon.cc
)

IF(INFINIT_LINUX)
  ADD_SUBDIRECTORY(linux)

  TARGET_LINK_LIBRARIES(horizon linux)
ELSEIF(INFINIT_MACOSX)
  ADD_SUBDIRECTORY(macosx)

  TARGET_LINK_LIBRARIES(horizon macosx)
ELSEIF(INFINIT_WINDOWS)
  ADD_SUBDIRECTORY(windows)

  TARGET_LINK_LIBRARIES(horizon windows)
ENDIF()
