add_subdirectory(access)
add_subdirectory(authority)
add_subdirectory(dictionary)
add_subdirectory(group)
add_subdirectory(network)
add_subdirectory(passport)
add_subdirectory(setup)
# XXX add_subdirectory(shell)
add_subdirectory(user)
# XXX ADD_SUBDIRECTORY(diary)
add_subdirectory(transfer)
add_subdirectory(progress)
